--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="enable_custom_alert_full">Enable Custom Alert Full</string>
     <string name="alert_simple">Simple</string>
-    <string name="alert_one_button">One Button</string>
-    <string name="alert_two_buttons">Two Buttons</string>
+    <string name="alert_one_button">1 Btn</string>
+    <string name="alert_two_buttons">2 Btn</string>
+    <string name="alert_three_buttons">3 Btn</string>
 
     <string name="hint_title">Title</string>
     <string name="hint_message">Message</string>
